# plugins-workspace-custom

./: .gitignore  .taurignore  Cargo.toml  README.md  eslint.config.js  package.json  pnpm-lock.yaml  renovate.json
.changes/: config.json  geolocation-android-timeout.md  readme.md  updater-new-bundle-support.md  window-state-custom-dir.md
.github/: CONTRIBUTING.md
.github/workflows/: audit-javascript.yml  check-change-files.yml  check-generated-files.yml  covector-version-or-publish.yml  fmt.yml  lint-javascript.yml  lint-rust.yml  sync.yml  test-rust.yml
.scripts/ci/: check-change-files.js  check-license-header.js
examples/api/: CHANGELOG.md  index.html  package.json
examples/api/src/: App.svelte  main.js
examples/api/src-tauri/: CHANGELOG.md  Cargo.toml
plugins/autostart/: CHANGELOG.md  Cargo.toml  README.md  package.json
plugins/autostart/src/: lib.rs
plugins/barcode-scanner/: CHANGELOG.md  Cargo.toml  api-iife.js  package.json
plugins/biometric/: CHANGELOG.md  Cargo.toml  README.md  package.json
plugins/cli/: CHANGELOG.md  Cargo.toml  README.md  package.json
plugins/cli/src/: config.rs  lib.rs  parser.rs
plugins/clipboard-manager/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  package.json
plugins/clipboard-manager/guest-js/: index.ts
plugins/clipboard-manager/src/: desktop.rs  error.rs  lib.rs
plugins/deep-link/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json
plugins/deep-link/guest-js/: index.ts
plugins/deep-link/src/: config.rs  error.rs  lib.rs
plugins/dialog/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  package.json
plugins/dialog/guest-js/: index.ts
plugins/dialog/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
plugins/fs/: CHANGELOG.md  Cargo.toml  api-iife.js  build.rs  package.json
plugins/fs/guest-js/: index.ts
plugins/fs/permissions/: default.toml  read-meta.toml
plugins/fs/permissions/autogenerated/: reference.md
plugins/fs/permissions/autogenerated/commands/: read_text_file_lines.toml  size.toml  write_file.toml
plugins/fs/permissions/schemas/: schema.json
plugins/fs/src/: commands.rs  file_path.rs  lib.rs  scope.rs  watcher.rs
plugins/geolocation/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  package.json
plugins/geolocation/src/: commands.rs  lib.rs  models.rs
plugins/global-shortcut/: CHANGELOG.md  Cargo.toml  api-iife.js  package.json
plugins/global-shortcut/src/: lib.rs
plugins/haptics/: CHANGELOG.md  Cargo.toml  README.md  package.json
plugins/haptics/src/: commands.rs  error.rs  lib.rs  models.rs
plugins/http/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  package.json
plugins/http/guest-js/: index.ts
plugins/http/src/: commands.rs  error.rs  lib.rs  scope.rs
plugins/localhost/: CHANGELOG.md  Cargo.toml  README.md
plugins/localhost/src/: lib.rs
plugins/log/: CHANGELOG.md  Cargo.toml  api-iife.js  package.json
plugins/log/guest-js/: index.ts
plugins/log/ios/Sources/: LogPlugin.swift
plugins/log/permissions/autogenerated/: reference.md
plugins/log/permissions/schemas/: schema.json
plugins/log/src/: commands.rs  lib.rs
plugins/nfc/: CHANGELOG.md  Cargo.toml  README.md  package.json
plugins/nfc/guest-js/: index.ts
plugins/notification/: CHANGELOG.md  Cargo.toml  api-iife.js  package.json
plugins/notification/guest-js/: index.ts
plugins/notification/src/: desktop.rs  lib.rs  mobile.rs
plugins/opener/: CHANGELOG.md  Cargo.toml  package.json
plugins/opener/android/: build.gradle.kts
plugins/opener/src/: lib.rs  reveal_item_in_dir.rs
plugins/os/: CHANGELOG.md  Cargo.toml  package.json
plugins/os/src/: lib.rs
plugins/persisted-scope/: CHANGELOG.md  Cargo.toml  README.md
plugins/persisted-scope/src/: lib.rs
plugins/positioner/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json
plugins/process/: CHANGELOG.md  Cargo.toml  package.json
plugins/shell/: CHANGELOG.md  Cargo.toml  api-iife.js  build.rs  package.json
plugins/single-instance/: CHANGELOG.md  Cargo.toml  README.md
plugins/sql/: CHANGELOG.md  Cargo.toml  README.md  package.json
plugins/store/: CHANGELOG.md  Cargo.toml  api-iife.js  package.json
plugins/stronghold/: CHANGELOG.md  Cargo.toml  README.md  package.json
plugins/updater/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  build.rs  package.json
plugins/upload/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  package.json
plugins/websocket/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  package.json
plugins/websocket/examples/tauri-app/src-tauri/: Cargo.toml
plugins/window-state/: CHANGELOG.md  Cargo.toml  README.md  api-iife.js  package.json
shared/: rollup.config.js
shared/template/: README.md  package.json
(+134 files in other folders)
