[package]
name = "tauri-plugin-log"
version = "2.7.0"
description = "Configurable logging for your Tauri app."
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
links = "tauri-plugin-log"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.platforms.support]
windows = { level = "full", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
android = { level = "full", notes = "" }
ios = { level = "full", notes = "" }

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true }
thiserror = { workspace = true }
serde_repr = "0.1"
byte-unit = "5"
log = { workspace = true, features = ["kv_unstable"] }
time = { version = "0.3", features = [
  "formatting",
  "local-offset",
  "macros",
  "parsing",
] }
fern = "0.7"
tracing = { workspace = true, optional = true }

[target."cfg(target_os = \"android\")".dependencies]
android_logger = "0.15"

[target."cfg(target_os = \"ios\")".dependencies]
swift-rs = "1"
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = [
  "std",
  "NSString",
] }

[features]
colored = ["fern/colored"]
tracing = ["dep:tracing"]
