[package]
name = "websocket-example"
version = "0.1.0"
description = "A Tauri App"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tauri = { workspace = true, features = ["wry", "common-controls-v6", "x11"] }
tokio = { version = "1", features = ["net"] }
futures-util = "0.3"
tauri-plugin-websocket = { path = "../../../" }
tokio-tungstenite = "0.27"

[build-dependencies]
tauri-build = { workspace = true }

[features]
prod = ["tauri/custom-protocol"]
